# noema_metascholar_metadata_collector_service

./: README.md  pyproject.toml  requirments.txt  run_collectors.py
config/: ingestion_config.yaml  sources.yaml
congif/: ingestion_config.yaml  sources.yaml
ingestion/collector/: arxiv_collector.py  base_Collector.py  openalex_collector.py  pubmed_collector.py  semantic_scholar_collector.py
ingestion/manager/: collection_manager.py
ingestion/storage/: storage_manager.py
ingestion/utils/: logger.py  models.py  rate_limiter.py
ms_metadata_collector_service.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
